--- a/notes.html
+++ b/notes.html
@@ -240,6 +240,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="./js/notes_fixed.js"></script>
+    <script src="./js/notes_optimized.js"></script>
 </body>
 </html>
