--- a/notes.html
+++ b/notes.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body>
+<body style="background-image: url('https://images.unsplash.com/photo-1524784998235-5757e396f08b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center; background-attachment: fixed;">
     <!-- شريط علوي (Navbar) -->
     <nav class="navbar navbar-dark bg-primary navbar-expand-lg">
         <div class="container-fluid">
@@ -75,6 +75,7 @@
                             <!-- ملاحظة 1 -->
                             <div class="col-md-4 col-sm-6 mb-4 note-card" data-subject="math" data-note-id="default_note_1">
                                 <div class="card h-100">
+                                    <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="الرياضيات">
                                     <div class="card-header d-flex justify-content-between align-items-center">
                                         <span class="badge bg-primary">الرياضيات</span>
                                         <div>
@@ -99,6 +100,7 @@
                             <!-- ملاحظة 2 -->
                             <div class="col-md-4 col-sm-6 mb-4 note-card" data-subject="science" data-note-id="default_note_2">
                                 <div class="card h-100">
+                                    <img src="https://images.unsplash.com/photo-1524995100481-10243b04e7a5?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="العلوم">
                                     <div class="card-header d-flex justify-content-between align-items-center">
                                         <span class="badge bg-success">العلوم</span>
                                         <div>
@@ -123,6 +125,7 @@
                             <!-- ملاحظة 3 -->
                             <div class="col-md-4 col-sm-6 mb-4 note-card" data-subject="arabic" data-note-id="default_note_3">
                                 <div class="card h-100">
+                                    <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="اللغة العربية">
                                     <div class="card-header d-flex justify-content-between align-items-center">
                                         <span class="badge bg-warning text-dark">اللغة العربية</span>
                                         <div>
@@ -174,12 +177,26 @@
                         <h5 class="mb-0">نصائح لتدوين الملاحظات الفعالة</h5>
                     </div>
                     <div class="card-body">
-                        <ul class="list-unstyled">
-                            <li class="mb-2">✓ استخدم عناوين واضحة للملاحظات</li>
-                            <li class="mb-2">✓ ركز على النقاط الرئيسية والأفكار الأساسية</li>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="https://images.unsplash.com/photo-1524784998235-5757e396f08b?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" class="img-fluid rounded mb-3" alt="كتابة ملاحظات">
+                                <ul class="list-unstyled">
+                                    <li class="mb-2">✓ استخدم عناوين واضحة للملاحظات</li>
+                                    <li class="mb-2">✓ ركز على النقاط الرئيسية والأفكار الأساسية</li>
                             <li class="mb-2">✓ استخدم الرسوم البيانية عندما يكون ذلك مناسباً</li>
                             <li>✓ راجع ملاحظاتك بانتظام لتعزيز الحفظ</li>
                         </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <img src="https://images.unsplash.com/photo-1560472354-b33ff0c44a43?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" class="img-fluid rounded mb-3" alt="مختبر علمي">
+                                <ul class="list-unstyled">
+                                    <li class="mb-2">✓ استخدم نظاماً ترميزياً للأفكار المتعلقة</li>
+                                    <li class="mb-2">✓ اجعل ملاحظاتك منظمة ومنسقة</li>
+                                    <li class="mb-2">✓ أضف أمثلة عملية لتوضيح المفاهيم</li>
+                                    <li>✓ استخدم ألوان مختلفة لتعزيز التذكر</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
