--- a/schedule.html
+++ b/schedule.html
@@ -3,35 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>جدول الدراسة - كلية المجتمع بلاد الروس- سنحان</title>
+    <title>جدول الدراسة -  كلية المجتمع بلاد الروس- سنحان </title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- تأثيرات ناسا -->
-    <style>
-        .main-bg {
-            background-image: url('https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            position: relative;
-        }
-        
-        .main-bg::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.7);
-            z-index: -1;
-        }
-    </style>
 </head>
-<body class="main-bg" style="background-image: url('https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center; background-attachment: fixed;">
+<body>
     <!-- شريط علوي (Navbar) -->
     <nav class="navbar navbar-dark bg-primary navbar-expand-lg">
         <div class="container-fluid">
@@ -153,50 +132,24 @@
                         <h5 class="mb-0">المواد الدراسية</h5>
                     </div>
                     <div class="card-body">
-                        <div class="subjects-container">
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <div class="card h-100">
-                                        <img src="https://images.unsplash.com/photo-1577896851231-70ef18881754?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="الرياضيات">
-                                        <div class="card-body">
-                                            <h5 class="card-title">الرياضيات</h5>
-                                            <p class="card-text">4 ساعات أسبوعياً</p>
-                                            <span class="badge bg-primary rounded-pill">الإثنين والثلاثاء</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <div class="card h-100">
-                                        <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="العلوم">
-                                        <div class="card-body">
-                                            <h5 class="card-title">العلوم</h5>
-                                            <p class="card-text">3 ساعات أسبوعياً</p>
-                                            <span class="badge bg-success rounded-pill">الأحد والخميس</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <div class="card h-100">
-                                        <img src="https://images.unsplash.com/photo-1589998059171-988d887df646?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="اللغة العربية">
-                                        <div class="card-body">
-                                            <h5 class="card-title">اللغة العربية</h5>
-                                            <p class="card-text">3 ساعات أسبوعياً</p>
-                                            <span class="badge bg-warning text-dark rounded-pill">السبت والأربعاء</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <div class="card h-100">
-                                        <img src="https://images.unsplash.com/photo-1519904981063-b0cf448d479e?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="اللغة الإنجليزية">
-                                        <div class="card-body">
-                                            <h5 class="card-title">اللغة الإنجليزية</h5>
-                                            <p class="card-text">2 ساعة أسبوعياً</p>
-                                            <span class="badge bg-info rounded-pill">الثلاثاء</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <ul id="subjectsList" class="list-group">
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                الرياضيات
+                                <span class="badge bg-primary rounded-pill">4 ساعات</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                العلوم
+                                <span class="badge bg-primary rounded-pill">3 ساعات</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                اللغة العربية
+                                <span class="badge bg-primary rounded-pill">3 ساعات</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                اللغة الإنجليزية
+                                <span class="badge bg-primary rounded-pill">2 ساعات</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -207,26 +160,12 @@
                         <h5 class="mb-0">نصائح لتنظيم الوقت</h5>
                     </div>
                     <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img src="https://images.unsplash.com/photo-1514320291840-2e0a9bf2a9ae?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" class="img-fluid rounded mb-3" alt="شاشة ساعة">
-                                <ul class="list-unstyled">
-                                    <li class="mb-2">✓ خصص وقتاً ثابتاً للدراسة كل يوم</li>
-                                    <li class="mb-2">✓ ابدأ بالمادة الأصعب عندما تكون نشيطاً</li>
-                                    <li class="mb-2">✓ استخدم تقنية البومودورو (25 دقيقة دراسة، 5 دقائق راحة)</li>
-                                    <li>✓ قم بمراجعة جدولك الدراسي أسبوعياً</li>
-                                </ul>
-                            </div>
-                            <div class="col-md-6">
-                                <img src="https://images.unsplash.com/photo-1578662996442-48f60103fc96?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" class="img-fluid rounded mb-3" alt="شاشة زمنية">
-                                <ul class="list-unstyled">
-                                    <li class="mb-2">✓ تأكد من الحصول على قسط كافٍ من النوم</li>
-                                    <li class="mb-2">✓ خصص مكاناً مخصصاً للدراسة</li>
-                                    <li class="mb-2">✓ قسّم المهام الكبيرة إلى مهام أصغر</li>
-                                    <li>✓ احتفل بإنجازاتك الصغيرة</li>
-                                </ul>
-                            </div>
-                        </div>
+                        <ul class="list-unstyled">
+                            <li class="mb-2">✓ خصص وقتاً ثابتاً للدراسة كل يوم</li>
+                            <li class="mb-2">✓ ابدأ بالمادة الأصعب عندما تكون نشيطاً</li>
+                            <li class="mb-2">✓ استخدم تقنية البومودورو (25 دقيقة دراسة، 5 دقائق راحة)</li>
+                            <li>✓ قم بمراجعة جدولك الدراسي أسبوعياً</li>
+                        </ul>
                     </div>
                 </div>
             </div>
